--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
 <p>Author: <b><%= @post.user.email %></b><p> 
-<% if user_signed_in? %>
-  <%= link_to 'Edit post', edit_post_path(@post) %>
-  <%= link_to 'Delete post', post_path(@post), method: :delete, data: { confirm: 'Are you sure that you want to delete this post?'} %>
+<% if user_signed_in? && current_user.id == @post.user_id %>
+  <%= link_to 'Edit post', edit_post_path(@post), class: "btn btn-outline-warning" %>
+  <%= link_to 'Delete post', post_path(@post), method: :delete, data: { confirm: 'Are you sure that you want to delete this post?'}, class: "btn btn-outline-danger" %>
 <% end %>
