--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
 <% end %>
 
-<%= form_for @post do |f| %>
+<%= form_for @post, html:  {multipart: true } do |f| %>
   <div class="form-group mb-3">
     <%= f.label :title, class: "form-label" %>
     <%= f.text_field :title, class: "form-control" %>
@@ -20,7 +20,10 @@
   </div> 
   <div class="form-group mb-3">
     <%= f.label :body, class: "form-label" %>
-    <%= f.text_area :body, class: "form-control" %>
+    <%= f.rich_text_area :body, class: "form-control" %>
+  </div> 
+  <div class="form-group mb-3">    
+    <%= f.file_field :image %>
   </div> 
   <div class="button-group">
     <%= f.submit 'Save post', class: 'btn btn-primary form-button-back' %>    
