--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @post.title %></h1>
+<%= image_tag @post.image.url(:large), class: "img-fluid" if @post.image? %>
 <p><%= @post.body %></p>
 <p>Author: <b><%= @post.user.email %></b><p> 
 <% if user_signed_in? && current_user.id == @post.user_id %>
