--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
     <div class="posts">
       <% if user_signed_in? %>
         <%=  link_to 'Show all posts', posts_path, class: "btn btn-info all-post" %>
-        <%=  link_to 'Create new post', new_post_path, class: "btn btn-warning all-post" %>
+        <%=  link_to 'Create new post', new_admin_post_path, class: "btn btn-warning all-post" %>
       <% else %>
         <%=  link_to 'Show all posts', posts_path, class: "btn btn-info all-post" %>
       <% end %>
@@ -15,8 +15,11 @@
       <ul class="btn-group auth-items">
         <% if user_signed_in? %>
           <li class="auth-item">
-            <%= link_to 'All users', users_path, class: "btn btn-warning auth-link"%>          
-          </li>
+            <%= link_to 'All users', users_path, class: "btn btn-info auth-link"%>          
+          </li>    
+          <li class="auth-item">
+            <%= link_to 'My accaunt', user_path(current_user.id), class: "btn btn-info auth-link"%>          
+          </li>        
           <li class="auth-item">
             <%= link_to 'Edit your accaunt', edit_user_registration_path, class: "btn btn-warning auth-link"%>          
           </li>
