--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All users posts</h1>
+<h1>All users</h1>
 
 <% @users.each do |user| %>
   <h1>Username: <%= link_to user.user_name, user_path(user) %> </h1>
