--- a/app/views/profile/posts/_form.html.erb
+++ b/app/views/profile/posts/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
 <% end %>
 
-<%= form_for [:admin, @post], html:  {multipart: true } do |f| %>
+<%= form_for [:profile, @post], html:  {multipart: true } do |f| %>
   <div class="form-group mb-3">
     <%= f.label :title, class: "form-label" %>
     <%= f.text_field :title, class: "form-control" %>
