--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,8 +30,8 @@
   </div>
 
   <% if user_signed_in? && current_user.id == post.user_id %>
-    <%= link_to 'Edit post', edit_admin_post_path(post), class: "btn btn-outline-warning" %>
-    <%= link_to 'Delete post', admin_post_path(post), method: :delete, data: { confirm: 'Are you sure that you want to delete this post?'}, class: "btn btn-outline-danger" %>
+    <%= link_to 'Edit post', edit_profile_post_path(post), class: "btn btn-outline-warning" %>
+    <%= link_to 'Delete post', profile_post_path(post), method: :delete, data: { confirm: 'Are you sure that you want to delete this post?'}, class: "btn btn-outline-danger" %>
   <% end %>
 
   <hr>
